<resources>
    <string name="app_name">My Application</string>
    <string name="avatar">avatar</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="name1">name</string>
    <string name="name2">name</string>
    <string name="name3">name</string>
    <string name="ok">OK</string>
    <string name="sing_in">sing in</string>
    <string name="sing_up">sing up</string>
    <string name="exit">выйти</string>


</resources>